test/files/neg/multi-array.check
multi-array.scala:7: error: too many arguments (2) for constructor Array: (_length: Int)Array[T]
  val a: Array[Int] = new Array(10, 10)
                                    ^
one error found
